--- a/source/Compeus/Compeus.vcxproj.filters
+++ b/source/Compeus/Compeus.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="InfiniteThread.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Snapshot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Launcher.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="InfiniteThread.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Snapshot.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
